--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,8 @@
 
-[package]
-name = "aoc-2022"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+
+members = [
+    "solutions",
+    "gui",
+    "cli",
+]
